Color changes in activity_homepage

--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -6,7 +6,7 @@
     android:orientation="horizontal"
     android:id="@+id/rel"
     android:padding="10dp"
-    android:background="@color/bluey">
+    android:background="#da3b3b">
 
     <ImageView
         android:src="@drawable/pic"
