--- a/app/src/main/res/layout/activity_suggestions.xml
+++ b/app/src/main/res/layout/activity_suggestions.xml
@@ -18,49 +18,24 @@
         android:paddingTop="@dimen/activity_vertical_margin"
         android:orientation="vertical"
         tools:context=".MainActivity"
-        android:minHeight="500dp">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <AutoCompleteTextView
-                android:id="@+id/autoCompleteTextView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="Enter Place Here"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_toLeftOf="@+id/add_button"
-                android:textSize="20sp" />
-
-
-            <Button
-                android:layout_width="40dp"
-                android:layout_height="match_parent"
-                android:text="+"
-                android:id="@+id/add_button"
-                android:textSize="20sp"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:textColor="#ff0000" />
-
-        </RelativeLayout>
+        android:minHeight="500dp"
+        android:weightSum="1">
 
 
         <LinearLayout
             android:id="@+id/container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="539dp"
             android:orientation="vertical"
             android:minHeight="500dp"
-            android:weightSum="1">
+            android:weightSum="1"
+            android:layout_weight="3.59">
 
             <TextView
                 android:layout_width="254dp"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Selected Places :                                   "
+                android:text="Suggestions :"
                 android:id="@+id/textView"
                 android:textSize="25sp"
                 android:textColor="#000000"
@@ -70,17 +45,6 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <Button
-                style="?android:attr/buttonStyleSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="View Suggestions"
-                android:id="@+id/suggestion_button"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-
-                />
 
             <Button
                 style="?android:attr/buttonStyleSmall"
