--- a/app/src/main/res/layout/activity_displayallplaces.xml
+++ b/app/src/main/res/layout/activity_displayallplaces.xml
@@ -35,7 +35,7 @@
                 android:layout_width="254dp"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text="Suggestions :"
+                android:text="Places to Visit :"
                 android:id="@+id/textView"
                 android:textSize="25sp"
                 android:textColor="#000000"
@@ -50,7 +50,7 @@
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="113dp"
                 android:layout_height="wrap_content"
-                android:text="Proceed"
+                android:text="Get Route"
                 android:id="@+id/button"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentRight="true"
