--- a/app/src/main/res/layout/activity_chat_bot.xml
+++ b/app/src/main/res/layout/activity_chat_bot.xml
@@ -27,6 +27,7 @@
         android:inputType="text"
         android:imeOptions="actionDone"
         android:minWidth="150dp"
+        android:textCursorDrawable="@null"
         android:enabled="true" />
 
     <Button
