Made changes in UI

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,8 @@
     <color name="red_custom">#FF8A80</color>
     <color name="indigo">#C5CAE9</color>
     <color name="bluey">#00A3E8</color>
+    <color name="textColor">#1E4E65</color>
+    <color name="inputColor">#A7D6E0</color>
+    <color name="buttonColor">#138CBB</color>
+    <color name="buttonColorHome">#1FA0BD</color>
 </resources>
