--- a/app/src/main/res/layout/activity_chat_bot.xml
+++ b/app/src/main/res/layout/activity_chat_bot.xml
@@ -6,6 +6,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
+    android:background="@drawable/pic_3"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="india.collageapp.com.get_a_way.ChatBot">
 
@@ -37,9 +38,11 @@
         android:id="@+id/button1"
         android:layout_below="@+id/editText"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="74dp"
+        android:layout_marginTop="20dp"
         android:onClick="getReply"
-        android:enabled="false" />
+        android:enabled="false"
+        android:textColor="@color/white"
+        android:background="@color/buttonColor" />
 
 
 </RelativeLayout>
