--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -5,42 +5,46 @@
     android:layout_height="match_parent"
     android:orientation="horizontal"
     android:id="@+id/rel"
-    android:padding="10dp"
-    android:background="@color/bluey">
+    android:padding="24dp"
+    android:background="@drawable/pic_3">
 
-    <ImageView
-        android:src="@drawable/pic"
-        android:layout_width="wrap_content"
-        android:layout_height="120dp"
-        android:layout_gravity="center_horizontal"
-        android:id="@+id/imageView"
-        android:layout_above="@+id/button1"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="42dp" />
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="15dp"
+        android:textSize="50dp"
+        android:textColor="@color/textColor"
+        android:typeface="monospace"
+        android:gravity="center_horizontal"
+        android:layout_alignParentTop="true"
+        android:fontFamily="Chiller"
+        android:text="Get-A-Way"
+        android:id="@+id/textView2" />
 
     <Button
         android:id="@+id/button1"
         android:layout_width="fill_parent"
-        android:layout_height="70dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="8dp"
         android:textStyle="bold"
         android:textSize="22dp"
         android:padding="15dp"
         android:text="Places To Visit"
-        android:layout_centerVertical="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
         android:singleLine="true"
-        android:background="@color/white"
+        android:background="@drawable/round_home"
         android:allowUndo="false"
-        android:textColor="@color/bluey"
-        android:layout_margin="5dp"
-        />
+        android:textColor="@color/white"
+        android:layout_below="@+id/textView2"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="fill_parent"
-        android:layout_height="70dp"
+        android:layout_marginBottom="8dp"
+        android:layout_height="60dp"
         android:textStyle="bold"
         android:textSize="22dp"
         android:padding="15dp"
@@ -48,15 +52,16 @@
         android:layout_below="@+id/button1"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:background="@color/white"
-        android:textColor="@color/bluey"
+        android:background="@drawable/round_home"
+        android:textColor="@color/white"
         android:layout_margin="5dp"
         />
 
     <Button
         android:id="@+id/button3"
         android:layout_width="fill_parent"
-        android:layout_height="70dp"
+        android:layout_height="60dp"
+        android:layout_marginBottom="8dp"
         android:textStyle="bold"
         android:textSize="22dp"
         android:padding="15dp"
@@ -64,8 +69,8 @@
         android:layout_below="@+id/button2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:background="@color/white"
-        android:textColor="@color/bluey"
+        android:background="@drawable/round_home"
+        android:textColor="@color/white"
         android:layout_margin="5dp"
         />
 
