--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,34 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:fitsSystemWindows="true"
-    android:background="#00A3E8">
+    android:background="@drawable/pic_6">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="56dp"
         android:paddingLeft="24dp"
         android:paddingRight="24dp">
 
-        <ImageView android:src="@drawable/pic"
-            android:layout_width="wrap_content"
-            android:layout_height="72dp"
-            android:layout_marginBottom="24dp"
-            android:layout_gravity="center_horizontal" />
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="110dp"
+            android:layout_marginBottom="15dp"
+            android:textSize="50dp"
+            android:textColor="@color/textColor"
+            android:typeface="monospace"
+            android:gravity="center_horizontal"
+            android:layout_alignParentTop="true"
+            android:fontFamily="Chiller"
+            android:text="Get-A-Way" />
 
         <!-- Email Label -->
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp">
+            android:gravity="center|center_horizontal|center_vertical"
+            android:layout_marginTop="35dp"
+            android:layout_marginBottom="25dp"
+            android:background="@drawable/edittext_rounded_corners">
             <EditText android:id="@+id/input_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
                 android:inputType="textEmailAddress"
+                android:textSize="18sp"
+
+                android:ellipsize="start"
+                android:gravity="center_horizontal"
+                android:textColor="#ffffff"
+                android:background="#00000000"
                 android:hint="Username" />
         </android.support.design.widget.TextInputLayout>
 
@@ -37,11 +52,19 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp">
+            android:layout_marginBottom="25dp"
+            android:background="@drawable/edittext_rounded_corners" >
             <EditText android:id="@+id/input_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
+
                 android:inputType="textPassword"
+                android:textSize="18sp"
+                android:background="#00000000"
+
+                android:ellipsize="start"
+                android:gravity="center_horizontal"
                 android:hint="Password"/>
         </android.support.design.widget.TextInputLayout>
 
@@ -50,17 +73,18 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginBottom="35dp"
             android:padding="12dp"
+            android:background="@drawable/edittext_rounded_corners1"
             android:text="Login"/>
 
         <TextView android:id="@+id/link_signup"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
+            android:layout_marginBottom="15dp"
             android:text="No account yet? Create one"
             android:gravity="center"
             android:textSize="16dip"/>
 
     </LinearLayout>
-</ScrollView>
+</RelativeLayout>
