--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -8,6 +8,7 @@
     android:layout_alignParentStart="true"
     android:id="@+id/scrollView">
 
+
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
@@ -19,6 +20,19 @@
         android:orientation="vertical"
         tools:context=".MainActivity"
         android:minHeight="500dp">
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="15dp"
+            android:textSize="30dp"
+            android:textColor="@color/textColor"
+            android:typeface="monospace"
+            android:gravity="center_horizontal"
+            android:layout_alignParentTop="true"
+            android:fontFamily="Chiller"
+            android:text="Get-A-Way" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -51,7 +65,7 @@
         <LinearLayout
             android:id="@+id/container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="443dp"
             android:orientation="vertical"
             android:minHeight="500dp"
             android:weightSum="1">
