--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -1,61 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:background="#00A3E8">
+    android:background="@drawable/pic_3">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="56dp"
-        android:paddingLeft="24dp"
-        android:paddingRight="24dp">
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp">
 
-        <ImageView android:src="@drawable/pic"
-            android:layout_width="wrap_content"
-            android:layout_height="72dp"
-            android:layout_marginBottom="24dp"
-            android:layout_gravity="center_horizontal" />
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="110dp"
+            android:layout_marginBottom="15dp"
+            android:textSize="50dp"
+            android:textColor="@color/textColor"
+            android:typeface="monospace"
+            android:gravity="center_horizontal"
+            android:layout_alignParentTop="true"
+            android:fontFamily="Chiller"
+            android:text="Get-A-Way" />
+
 
         <!--  Name Label -->
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp">
+            android:gravity="center|center_horizontal|center_vertical"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:background="@drawable/edittext_rounded_corners">
             <EditText android:id="@+id/input_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
                 android:inputType="textCapWords"
+                android:textSize="18sp"
+
+                android:ellipsize="start"
+                android:gravity="center_horizontal"
+                android:textColor="#ffffff"
+                android:background="#00000000"
                 android:hint="Name" />
+
         </android.support.design.widget.TextInputLayout>
+
 
         <!-- Email Label -->
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp">
-            <EditText android:id="@+id/input_email"
+            android:layout_height="match_parent"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+
+            android:background="@drawable/edittext_rounded_corners">
+        <EditText android:id="@+id/input_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
                 android:inputType="textEmailAddress"
+                android:textSize="18sp"
+                android:ellipsize="start"
+
+                android:background="#00000000"
+
+                android:gravity="center_horizontal"
                 android:hint="Username" />
         </android.support.design.widget.TextInputLayout>
 
         <!-- Password Label -->
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp">
+            android:layout_height="match_parent"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:background="@drawable/edittext_rounded_corners">
             <EditText android:id="@+id/input_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="12dp"
                 android:inputType="textPassword"
+                
+                android:textSize="18sp"
+                android:background="#00000000"
+
+                android:ellipsize="start"
+                android:gravity="center_horizontal"
                 android:hint="Password"/>
         </android.support.design.widget.TextInputLayout>
 
@@ -64,9 +100,10 @@
             android:id="@+id/btn_signup"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="25dp"
             android:layout_marginBottom="24dp"
             android:padding="12dp"
+            android:background="@drawable/edittext_rounded_corners1"
             android:text="Create Account"/>
 
         <TextView android:id="@+id/link_login"
@@ -74,6 +111,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
             android:text="Already a member? Login"
+
             android:gravity="center"
             android:textSize="16dip"/>
 
