--- a/app/src/main/res/layout/activity_chat_bot.xml
+++ b/app/src/main/res/layout/activity_chat_bot.xml
@@ -23,13 +23,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/editText"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
         android:inputType="text"
         android:imeOptions="actionDone"
-        android:minWidth="150dp"
+        android:minWidth="200dp"
         android:textCursorDrawable="@null"
-        android:enabled="true" />
+        android:enabled="true"
+        android:hint="Like restaurants,park "
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:layout_width="wrap_content"
